# chessengine

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  attacks.h  attacks_main.cc  attacks_test.cc  benchmark  bitboard.h  bitboard_test.cc  castling.h  castling_rights.cc  castling_rights.h  castling_test.cc  chessengine.cc  line.h  line_test.cc  move.cc  move.h  move_generator.cc  move_generator.h  move_generator_test.cc  move_test.cc  perft  perft.cc  perft.h  perft_test.cc  position.cc  position.h  position_main.cc  position_test.cc  scoped_move.h  testing.cc  testing.h  testing_test.cc  types.cc  (+3 more)
.github/workflows/: deploy.yml
benchmarks/: BUILD  CMakeLists.txt  attacks_benchmark.cc  attacks_benchmark_latest.txt  moves_benchmark.cc  moves_benchmark_latest.txt  search_benchmark.cc  search_benchmark_latest.txt
cli/: BUILD  CMakeLists.txt  chessengine.cc  cli.cc  cli.h  cli_test.cc  command.cc  command.h  follychess.cc
cli/commands/: BUILD  CMakeLists.txt  display.h  isready_command.h  perft.h  perft_command.h  position.h  position_command.cc  position_command.h  uci_command.h
docs/: CNAME  index.html
engine/: BUILD  CMakeLists.txt  attacks.h  attacks_test.cc  bitboard.ccm  bitboard.h  bitboard_test.cc  castling.h  castling_test.cc  game.cc  game.h  game_test.cc  generate_magic.cc  line.h  line_test.cc  magic.ccm  magic.h  magic_main.cc  move.cc  move.h  move_generator.cc  move_generator.h  move_generator_test.cc  move_test.cc  perft.cc  perft.h  perft_test.cc  position.cc  position.h  position_main.cc  position_test.cc  scoped_move.h  testing.cc  testing.h  testing_test.cc  types.cc  types.ccm  types.h  types_test.cc  zobrist.cc  (+2 more)
performance/: BUILD  attack_benchmark_latest.txt  attacks_perf_test.cc
search/: BUILD  CMakeLists.txt  alpha_beta_search.cc  alpha_beta_search.h  evaluation.cc  evaluation.h  evaluation_test.cc  move_ordering.cc  move_ordering.h  move_ordering_test.cc  random_search.cc  random_search.h  search.cc  search.h  search_test.cc  transposition.h
site/: hugo_stats.json  package.json  pnpm-lock.yaml
site/config/_default/: hugo.toml  languages.toml  params.toml
site/config/_default/menus/: menus.en.toml
site/content/: _index.md
site/content/docs/guides/: installation.md  usage.md
site/content/docs/internals/: _index.md  data-structures.md
site/layouts/: home.html
